# CAtlas

./: .gitignore  CMakeLists.txt  README.md  atlas.c  extract_channels.c  install.cmd  install_internal.ps1  merge_channels.c
ImageMagick-7.1.1-Q16-HDRI/: NOTICE.txt  configure.xml
ImageMagick-7.1.1-Q16-HDRI/include/MagickCore/: magick-baseconfig.h  version.h
ImageMagick-7.1.1-Q16-HDRI/lib/: CORE_RL_MagickCore_.lib  CORE_RL_MagickWand_.lib
ImageMagick-7.1.1-Q16-HDRI___old/: NOTICE.txt  configure.xml  ffmpeg.readme.txt
ImageMagick-7.1.1-Q16-HDRI___old/include/MagickCore/: magick-baseconfig.h
ImageMagick-7.1.1-Q16-HDRI___old/lib/: CORE_RL_Magick++_.lib
images/: 1.png_  2.png_  config.txt  test.blend  test.blend1
src/: calculations.c  calculations.h  definitions.h  dir_files_utils.c  dir_files_utils.h  errors.c  errors.h  extract_config.c  extract_config.h  img_manip.c  img_manip.h  shared_types.h  utils.c  utils.h  utils.test.c
